# local-transcriber

./: .gitignore  .pre-commit-config.yaml  .yamllint  ABOUT.md  BEST_PRACTICES.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: CHANGELOG.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  DOCUMENTATION_UPDATES.md  MAKEFILE_GUIDE.md  PROJECT_OVERVIEW.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  TROUBLESHOOTING.md
input/: .gitkeep
output/: .gitkeep
scripts/: docker-batch.sh  docker-setup.sh  fix-output-name.sh  setup-guide.sh
src/: __init__.py  config.py  transcriber.py
temp/: .gitkeep
tests/: __init__.py  test_transcriber.py
